--- a/dictionary-appjs/src/Dictionary.css
+++ b/dictionary-appjs/src/Dictionary.css
@@ -1,11 +1,11 @@
 .Dictionary h1 {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
 .Dictionary section {
-  background: white;
+  background:rgb(255, 251, 251);
   padding: 30px;
   border-radius: 6px;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
@@ -16,11 +16,13 @@
   width: 100%;
   border-radius: 6px;
   padding: 6px 10px;
-  color: #333;
+  color: #616365;
   border: 1px solid #ddd;
 }
 
 .Dictionary .hint {
   font-size: 11px;
   margin-top: 5px;
+  color: #616365;
+  font-weight: 400;
 }
